--- a/01-intro/homework.ipynb
+++ b/01-intro/homework.ipynb
@@ -112,254 +112,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "id": "d8229453",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>engine_displacement</th>\n",
-       "      <th>num_cylinders</th>\n",
-       "      <th>horsepower</th>\n",
-       "      <th>vehicle_weight</th>\n",
-       "      <th>acceleration</th>\n",
-       "      <th>model_year</th>\n",
-       "      <th>origin</th>\n",
-       "      <th>fuel_type</th>\n",
-       "      <th>drivetrain</th>\n",
-       "      <th>num_doors</th>\n",
-       "      <th>fuel_efficiency_mpg</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>170</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>159.0</td>\n",
-       "      <td>3413.433759</td>\n",
-       "      <td>17.7</td>\n",
-       "      <td>2003</td>\n",
-       "      <td>Europe</td>\n",
-       "      <td>Gasoline</td>\n",
-       "      <td>All-wheel drive</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>13.231729</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>130</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>97.0</td>\n",
-       "      <td>3149.664934</td>\n",
-       "      <td>17.8</td>\n",
-       "      <td>2007</td>\n",
-       "      <td>USA</td>\n",
-       "      <td>Gasoline</td>\n",
-       "      <td>Front-wheel drive</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>13.688217</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>170</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>78.0</td>\n",
-       "      <td>3079.038997</td>\n",
-       "      <td>15.1</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>Europe</td>\n",
-       "      <td>Gasoline</td>\n",
-       "      <td>Front-wheel drive</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>14.246341</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>220</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2542.392402</td>\n",
-       "      <td>20.2</td>\n",
-       "      <td>2009</td>\n",
-       "      <td>USA</td>\n",
-       "      <td>Diesel</td>\n",
-       "      <td>All-wheel drive</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>16.912736</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>210</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>140.0</td>\n",
-       "      <td>3460.870990</td>\n",
-       "      <td>14.4</td>\n",
-       "      <td>2009</td>\n",
-       "      <td>Europe</td>\n",
-       "      <td>Gasoline</td>\n",
-       "      <td>All-wheel drive</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>12.488369</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9699</th>\n",
-       "      <td>140</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>164.0</td>\n",
-       "      <td>2981.107371</td>\n",
-       "      <td>17.3</td>\n",
-       "      <td>2013</td>\n",
-       "      <td>Europe</td>\n",
-       "      <td>Diesel</td>\n",
-       "      <td>Front-wheel drive</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>15.101802</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9700</th>\n",
-       "      <td>180</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>154.0</td>\n",
-       "      <td>2439.525729</td>\n",
-       "      <td>15.0</td>\n",
-       "      <td>2004</td>\n",
-       "      <td>USA</td>\n",
-       "      <td>Gasoline</td>\n",
-       "      <td>All-wheel drive</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>17.962326</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9701</th>\n",
-       "      <td>220</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>138.0</td>\n",
-       "      <td>2583.471318</td>\n",
-       "      <td>15.1</td>\n",
-       "      <td>2008</td>\n",
-       "      <td>USA</td>\n",
-       "      <td>Diesel</td>\n",
-       "      <td>All-wheel drive</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>17.186587</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9702</th>\n",
-       "      <td>230</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>177.0</td>\n",
-       "      <td>2905.527390</td>\n",
-       "      <td>19.4</td>\n",
-       "      <td>2011</td>\n",
-       "      <td>USA</td>\n",
-       "      <td>Diesel</td>\n",
-       "      <td>Front-wheel drive</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>15.331551</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9703</th>\n",
-       "      <td>270</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>140.0</td>\n",
-       "      <td>2908.043477</td>\n",
-       "      <td>14.7</td>\n",
-       "      <td>2005</td>\n",
-       "      <td>Asia</td>\n",
-       "      <td>Diesel</td>\n",
-       "      <td>All-wheel drive</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>14.884467</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>9704 rows × 11 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "      engine_displacement  num_cylinders  horsepower  vehicle_weight  \\\n",
-       "0                     170            3.0       159.0     3413.433759   \n",
-       "1                     130            5.0        97.0     3149.664934   \n",
-       "2                     170            NaN        78.0     3079.038997   \n",
-       "3                     220            4.0         NaN     2542.392402   \n",
-       "4                     210            1.0       140.0     3460.870990   \n",
-       "...                   ...            ...         ...             ...   \n",
-       "9699                  140            5.0       164.0     2981.107371   \n",
-       "9700                  180            NaN       154.0     2439.525729   \n",
-       "9701                  220            2.0       138.0     2583.471318   \n",
-       "9702                  230            4.0       177.0     2905.527390   \n",
-       "9703                  270            3.0       140.0     2908.043477   \n",
-       "\n",
-       "      acceleration  model_year  origin fuel_type         drivetrain  \\\n",
-       "0             17.7        2003  Europe  Gasoline    All-wheel drive   \n",
-       "1             17.8        2007     USA  Gasoline  Front-wheel drive   \n",
-       "2             15.1        2018  Europe  Gasoline  Front-wheel drive   \n",
-       "3             20.2        2009     USA    Diesel    All-wheel drive   \n",
-       "4             14.4        2009  Europe  Gasoline    All-wheel drive   \n",
-       "...            ...         ...     ...       ...                ...   \n",
-       "9699          17.3        2013  Europe    Diesel  Front-wheel drive   \n",
-       "9700          15.0        2004     USA  Gasoline    All-wheel drive   \n",
-       "9701          15.1        2008     USA    Diesel    All-wheel drive   \n",
-       "9702          19.4        2011     USA    Diesel  Front-wheel drive   \n",
-       "9703          14.7        2005    Asia    Diesel    All-wheel drive   \n",
-       "\n",
-       "      num_doors  fuel_efficiency_mpg  \n",
-       "0           0.0            13.231729  \n",
-       "1           0.0            13.688217  \n",
-       "2           0.0            14.246341  \n",
-       "3           2.0            16.912736  \n",
-       "4           2.0            12.488369  \n",
-       "...         ...                  ...  \n",
-       "9699        NaN            15.101802  \n",
-       "9700        0.0            17.962326  \n",
-       "9701       -1.0            17.186587  \n",
-       "9702        1.0            15.331551  \n",
-       "9703       -1.0            14.884467  \n",
-       "\n",
-       "[9704 rows x 11 columns]"
+       "9704"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data"
+    "data.shape[0]"
    ]
   },
   {
@@ -507,130 +276,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "id": "e5c1ad6d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<bound method Series.median of 0       159.0\n",
-       "1        97.0\n",
-       "2        78.0\n",
-       "3         NaN\n",
-       "4       140.0\n",
-       "        ...  \n",
-       "9699    164.0\n",
-       "9700    154.0\n",
-       "9701    138.0\n",
-       "9702    177.0\n",
-       "9703    140.0\n",
-       "Name: horsepower, Length: 9704, dtype: float64>"
+       "np.float64(149.0)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data['horsepower'].median"
+    "data['horsepower'].median()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 34,
    "id": "6806e460",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "<bound method Series.mode of 0       159.0\n",
-       "1        97.0\n",
-       "2        78.0\n",
-       "3         NaN\n",
-       "4       140.0\n",
-       "        ...  \n",
-       "9699    164.0\n",
-       "9700    154.0\n",
-       "9701    138.0\n",
-       "9702    177.0\n",
-       "9703    140.0\n",
-       "Name: horsepower, Length: 9704, dtype: float64>"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0    152.0\n",
+      "Name: horsepower, dtype: float64\n"
+     ]
     }
    ],
    "source": [
-    "data['horsepower'].mode"
+    "mode = data['horsepower'].mode()\n",
+    "print(mode)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 38,
    "id": "9c2245eb",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0                                                   159.0\n",
-       "1                                                    97.0\n",
-       "2                                                    78.0\n",
-       "3       <bound method Series.mode of 0       159.0\\n1 ...\n",
-       "4                                                   140.0\n",
-       "                              ...                        \n",
-       "9699                                                164.0\n",
-       "9700                                                154.0\n",
-       "9701                                                138.0\n",
-       "9702                                                177.0\n",
-       "9703                                                140.0\n",
-       "Name: horsepower, Length: 9704, dtype: object"
+       "np.float64(149.0)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data['horsepower'].fillna(data['horsepower'].mode)"
+    "data['horsepower'].fillna(data['horsepower'].mode()).median()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 35,
    "id": "ddb44186",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<bound method Series.median of 0       159.0\n",
-       "1        97.0\n",
-       "2        78.0\n",
-       "3         NaN\n",
-       "4       140.0\n",
-       "        ...  \n",
-       "9699    164.0\n",
-       "9700    154.0\n",
-       "9701    138.0\n",
-       "9702    177.0\n",
-       "9703    140.0\n",
-       "Name: horsepower, Length: 9704, dtype: float64>"
+       "np.float64(149.0)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data['horsepower'].median"
+    "data['horsepower'].median()"
    ]
   },
   {
